tests/programs/invalid/multiarray.java
public class multiarray {
  protected int[][] x;
}